<resources>
    <string name="app_name">Cabxi Taxista</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_cedula">Número de Cédula</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    
    <string name="ingresar_primera_vez">Ingresar por primera vez</string>
    <string name="ingresar">Ingresar</string>
    <string name="telefono">Número de Teléfono</string>
    <string name="verificar">Verificar</string>
    <string name="repita_password">Repita su Contraseña</string>
    <string name="ir_a_login">Volver al Login</string>
    <string name="error_cedula_invalida">Debe ingresar un Número de Cédula Válido</string>
    <string name="error_contrasena_invalida">Debe ingresar una Contraseña Válida</string>

</resources>
